Mike freaking got the generation! Soft Constraints seem to be ok thus far...